--- a/Programming2 UAS.csproj
+++ b/Programming2 UAS.csproj
@@ -8,5 +8,6 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7"/>
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7"/>
 	</ItemGroup>
 </Project>
